--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.4.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
